--- a/app/globals.css
+++ b/app/globals.css
@@ -8,6 +8,7 @@
   --breakpoint-xl: 1200px;
 
   --color-primary: #0e1112;
+  --color-secondary: #696c6d;
   --color-grey: #484b4b;
   --color-accent: #eef7f9;
 
