Created Contact page

--- a/app/globals.css
+++ b/app/globals.css
@@ -9,6 +9,7 @@
 
   --color-primary: #0e1112;
   --color-secondary: #696c6d;
+  --color-placeholder: #757879;
   --color-grey: #484b4b;
   --color-accent: #eef7f9;
 
